test/library/packages/canCompileNoLink/errors/getUnsupportedHDF5type.chpl
use HDF5;

writeln(getHDF5Type(R));

record R {
}
