test/library/packages/canCompileNoLink/errors/getUnsupportedHDF5type.good
getUnsupportedHDF5type.chpl:3: error: Unhandled type in getHDF5Type: R
